@@ -475,8 +475,6 @@
   <block id="f5c64d3f640238b8d1e1ed7062c5561f" category="paragraph">En este momento, la versión 3.9.49 está disponible para modo estándar y modo restringido.</block>
   <block id="99acbaa3cb87e4fe6650072fa6b0a905" category="section-title">Gestión de identidades y accesos (IAM) de BlueXP</block>
   <block id="36cef198e9fac4b4a194f5e01017b8d1" category="list-text">Compatibilidad para asignar más de un rol a un usuario.</block>
-  <block id="6708a31732ccaf29d9ba72b524255e3e" category="list-text">Ahora, los roles están asociados a una de tres categorías: Plataforma, aplicación y servicios de datos.</block>
-  <block id="035261365b324f2942fd56c2f10f6ed5" category="inline-link">Lea acerca de los roles de IAM</block>
   <block id="4fafa85612a8b2fff96d593213d6a0ec" category="paragraph">La gestión de acceso e identidad de BlueXP  (IAM) se utiliza ahora en modo restringido.</block>
   <block id="2f73a8cbcbf617bd5a78738929bbe5b3" category="paragraph">La gestión de identidades y accesos (IAM) de BlueXP  es un modelo de gestión de recursos y accesos que reemplaza y mejora la funcionalidad anterior proporcionada por las cuentas de BlueXP  cuando se utiliza BlueXP  en modo estándar y restringido.</block>
   <block id="30f60d67f457bb040dffde52197a54da" category="list-title">Información relacionada</block>
@@ -548,9 +546,6 @@
   <block id="3aff149422876e5f443408fd802b4fb2" category="paragraph">La cartera digital de BlueXP  se ha rediseñado para facilitar el uso y ahora proporciona gestión de licencias y suscripciones adicionales.</block>
   <block id="5a1f7548d3f8b383dfe658d26f915cce" category="list-text">Los roles ahora están asociados a una de dos categorías: Plataforma y servicio de datos.</block>
   <block id="2a3e7caa563b2592e27f3890e8d21765" category="section-title">El modo restringido ahora utiliza BlueXP  IAM</block>
-  <block id="3a85c700de68ae35770a964c115eb7cb" category="list-title">Mejoras adicionales de IAM</block>
-  <block id="afa69926e5d0001214117331ecb2e622" category="list-text">Hay dos nuevos roles asociados a la categoría de aplicación: Visor del almacenamiento y Administrador del almacenamiento.</block>
-  <block id="df90fe85a844ffa5c11d99e37754376f" category="paragraph"><block ref="df90fe85a844ffa5c11d99e37754376f" category="inline-link-rx"></block></block>
   <block id="2b513ec32615ab736c1cab315db516f8" category="section-title">13 de enero de 2025</block>
   <block id="19cb29a89a6fbf6d87da92950ea8482c" category="section-title">Conector 3.9.48</block>
   <block id="3d725c77d5fb40a1e06f0ec1f3adb6bf" category="section-title">Gestión de identidades y acceso BlueXP</block>
@@ -816,4 +811,7 @@
   <block id="ba7df4741bd77385c236fcf981dd357a" category="paragraph">Tenga en cuenta estas consideraciones relacionadas con la búsqueda global:</block>
   <block id="03602fc4621dad9ee00f9e5d533ff5ea" category="list-text">El nuevo índice no se realiza en instantáneas etiquetadas como hora.</block>
   <block id="2bacd7c8c96302172c5d0324d784cf03" category="list-text">La nueva función de indexación sólo funciona en instantáneas de FlexVols, y no en instantáneas de FlexGroups.</block>
+  <block id="70c351474b2828e2c0dff97793686bc4" category="paragraph-title">Precisión mejorada del modelo de categorización</block>
+  <block id="19c8ed5c1b936813e368bc7d83dbccf2" category="inline-link-macro">categorías predefinidas</block>
+  <block id="f436ec850a6acc51f2281d01c1b289da" category="paragraph">La precisión del modelo de aprendizaje automático <block ref="fff0603fda0aac9c86fd12605ac8a06f" category="inline-link-macro-rx"></block>ha mejorado en un 11%.</block>
 </blocks>
